[JBIDE-9215] fixing launch command for remote as7 launch
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@32813 a97e2381-89e5-4abb-bab3-167db6db766c